readme.md file update 1

--- a/dl-model/train_model.ipynb
+++ b/dl-model/train_model.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_PATH = \"dataset\"  \n",
+    "DATASET_PATH = \"dl-model/dataset\"  \n",
     "categories   = [\"sleepy\", \"awake\"]\n",
     "IMG_SIZE     = 64              "
    ]
