delete note book title desc

--- a/dl-model/train_model.ipynb
+++ b/dl-model/train_model.ipynb
@@ -5,17 +5,7 @@
    "id": "a7497be8-f95f-401f-930b-28fa3338000f",
    "metadata": {},
    "source": [
-    "## Eye State Classification (Open/Closed Eyes)\n",
-    "---\n",
-    "Project breakdown:\n",
-    "1. Data Preparation\n",
-    "2. Model Definition (ANN & CNN)\n",
-    "3. Model Training\n",
-    "4. Model Evaluation (ANN vs CNN)\n",
-    "\n",
-    "Dataset used: MRL Eye Dataset  \n",
-    "Kaggle link: https://www.kaggle.com/datasets/akashshingha850/mrl-eye-dataset?resource=download  \n",
-    "Used data: Awake (25,770), Sleepy (25,167)"
+    "## Eye State Classification (Open/Closed Eyes)"
    ]
   },
   {
