--- a/dl-model/train_model.ipynb
+++ b/dl-model/train_model.ipynb
@@ -726,12 +726,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "a12e6e07-a0af-49ad-b3a3-9f87de3c9adc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread(\"open_close.jpg\")\n",
+    "img = cv2.imread(\"test_img_open_close.jpg\")\n",
     "\n",
     "img_gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "img_rgb  = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)"
